# 7guis-reflex-nix

./: .ghci  7guis-reflex.cabal  7guis-reflex.nix  ChangeLog.md  LICENSE  README.md  cabal-ghcjs.project  cabal.project  cpexesTMP.sh  default.nix  defnixGHC.txt  defnixGHCJS.txt  dev-server.sh  reflex-platform.nix  shell.nix  workOnGHC.sh  workOnGHCJS.sh
exe-js/: Main.hs
exe-wai/: Main.hs
guis7-reflex/: guis7-reflex.cabal
guis7-reflex-js/: guis7-reflex-js.cabal
guis7-reflex-kit/: Main.hs  guis7-reflex-kit.cabal
guis7-reflex-wai/: guis7-reflex-wai.cabal
guis7-reflex/src/: MainW.hs  Utils.hs  Widgets.hs
guis7-reflex/src/GUIs/: CRUD.hs  Cells.hs  CircleDrawer.hs  Counter.hs  FlightBooker.hs  TemperatureConverter.hs  Timer.hs
guis7-reflex/src/GUIs/Cells/: Parser.hs  Sheet.hs  Types.hs
guis7-reflex/src/GUIs/CircleDrawer/: Stack.hs
nix2/: 7guis-reflex.nix  default.nix  shell.nix
src/: Main.hs  MainW.hs  Utils.hs  Widgets.hs
src/GUIs/: CRUD.hs  Cells.hs  CircleDrawer.hs  Counter.hs  FlightBooker.hs  TemperatureConverter.hs  Timer.hs
src/GUIs/Cells/: Sheet.hs  Types.hs
