name:                7guis-reflex
version:             0.1.1.2
-- synopsis:
-- description:
author:              gspia
maintainer:          use github to contact
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24


library 
  hs-source-dirs:      src
  ghcjs-options:       -Wall
  default-language:    Haskell2010
  exposed-modules:     Utils
                     , Widgets
                     , MainW
                     , GUIs.Counter
                     , GUIs.TemperatureConverter
                     , GUIs.FlightBooker
                     , GUIs.Timer
                     , GUIs.CRUD
                     , GUIs.CircleDrawer
                     , GUIs.CircleDrawer.Stack
                     , GUIs.Cells
                     , GUIs.Cells.Parser
                     , GUIs.Cells.References
                     , GUIs.Cells.Sheet
                     , GUIs.Cells.Types
  other-extensions:    TemplateHaskell
                     , OverloadedStrings
  build-depends:       array
                     , base
                     , containers
                     , Decimal
                     , either
                     , ghcjs-dom
                     , mtl
                     , parsec
                     , reflex
                     , reflex-dom-core
                     , reflex-dom-htmlea
                     , safe
                     , text
                     , time
                     , jsaddle  >= 0.8.0.0 && < 0.10

-- first exe is default if no target is given
executable 7guis-reflex-js
  if !impl(ghcjs)
    buildable:         False
  main-is:             Main.hs
  hs-source-dirs:      exe-js
  default-language:    Haskell2010
  build-depends:       base
                     , 7guis-reflex
                     , jsaddle  >= 0.8.0.0 && < 0.10
                     , ghcjs-base
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists -dedupe
  cpp-options: -DGHCJS_BROWSER

executable 7guis-reflex-wai
  if impl(ghcjs)
    buildable:         False
  main-is:             Main.hs
  hs-source-dirs:      exe-wai
  ghc-options:       -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , jsaddle  >= 0.8.0.0 && < 0.10
                     , 7guis-reflex
                     , jsaddle-warp
                     , warp
                     , wai
                     , wai-app-static
                     , wai-middleware-static
                     , websockets
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists
 
executable 7guis-reflex-kit
  if impl(ghcjs)
    buildable:         False
  main-is:             Main.hs
  hs-source-dirs:      exe-kit
  ghc-options:       -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , 7guis-reflex
                     , jsaddle-webkit2gtk
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists


