name:                guis7-reflex-js
version:             0.1.1.3
-- synopsis:
-- description:
author:              gspia
maintainer:          use github to contact
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24

-- first exe is default if no target is given
executable guis7-reflex-js
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , guis7-reflex
                     , jsaddle 
                     , ghcjs-base
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists -dedupe
  cpp-options: -DGHCJS_BROWSER

