name:                guis7-reflex-kit
version:             0.1.1.3
-- synopsis:
-- description:
author:              gspia
maintainer:          use github to contact
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24

 
executable guis7-reflex-kit
  main-is:             Main.hs
  ghc-options:        -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , guis7-reflex
                     , jsaddle-webkit2gtk
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists


