name:                guis7-reflex-wai
version:             0.1.1.3
-- synopsis:
-- description:
author:              gspia
maintainer:          use github to contact
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24


executable guis7-reflex-wai
  main-is:             Main.hs
  ghc-options:       -Wall
  default-language:    Haskell2010
  build-depends:       base
                     , jsaddle
                     , guis7-reflex
                     , jsaddle-warp
                     , warp
                     , wai
                     , wai-app-static
                     , wai-middleware-static
                     , websockets
  ghc-options: -Wall -Wincomplete-uni-patterns 
               -Wincomplete-record-updates 
               -Wmissing-import-lists
 
