name:                guis7-reflex
version:             0.1.1.3
-- synopsis:
-- description:
author:              gspia
maintainer:          use github to contact
-- copyright:
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.24


library 
  hs-source-dirs:      src
  ghcjs-options:       -Wall
  default-language:    Haskell2010
  exposed-modules:     Utils
                     , Widgets
                     , MainW
                     , GUIs.Counter
                     , GUIs.TemperatureConverter
                     , GUIs.FlightBooker
                     , GUIs.Timer
                     , GUIs.CRUD
                     , GUIs.CircleDrawer
                     , GUIs.CircleDrawer.Stack
                     , GUIs.Cells
                     , GUIs.Cells.Parser
                     , GUIs.Cells.References
                     , GUIs.Cells.Sheet
                     , GUIs.Cells.Types
  build-depends:       array
                     , base
                     , containers
                     , Decimal
                     , ghcjs-dom
                     , mtl
                     , parsec
                     , reflex
                     , reflex-dom-core
                     , reflex-dom-htmlea
                     , safe
                     , text
                     , time
                     , jsaddle  

